--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "typescript": "~2.7.2",
     "@angular/cli": "~6.0.3",
     "@angular/language-service": "^6.0.2",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "2.8.6",
+    "@types/jasminewd2": "2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
